--- a/Simulated_DA_Paper_Parallel.ipynb
+++ b/Simulated_DA_Paper_Parallel.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNx7TjsZmpUZbMkkPbngyIE",
+      "authorship_tag": "ABX9TyP48t+EgozVmjv9nniacqkz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# A Simple and Sequential Python Code for Ising Model"
+        "# A Simple and Parallel Python Code for Ising Model"
       ],
       "metadata": {
         "id": "CbCUziKtuyyI"
@@ -759,10 +759,22 @@
         "\n"
       ],
       "metadata": {
-        "id": "kM8ZpzRx2ZUt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kM8ZpzRx2ZUt",
+        "outputId": "715588aa-cd9f-4bc2-d7be-fde874ba150c"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
